# gnome-semilab

./: .gitignore  README.md  com.github.yihuajack.GnomeSemiLab.json  com.github.yihuajack.GnomeSemiLab.json~  meson.build  sqlimit-test
data/icons/: meson.build
data/icons/hicolor/scalable/apps/: com.github.yihuajack.GnomeSemiLab-scalable.ai
data/icons/hicolor/symbolic/apps/: com.github.yihuajack.GnomeSemiLab-symbolic.ai
gnome-app/: com.github.yihuajack.SemiLab.json  meson.build
gnome-app/data/: com.github.yihuajack.SemiLab.appdata.xml.in  com.github.yihuajack.SemiLab.desktop.in  com.github.yihuajack.SemiLab.gschema.xml  meson.build
gnome-app/data/icons/: meson.build
gnome-app/po/: POTFILES  meson.build
gnome-app/src/: main.c  meson.build  semi_lab-application.c  semi_lab-application.h  semi_lab-window.c  semi_lab-window.h  semi_lab-window.ui  semi_lab.gresource.xml
gnome-semilab/: com.github.yihuajack.GnomeSemiLab.json  com.github.yihuajack.GnomeSemiLab.json~
gnome-semilab/data/: com.github.yihuajack.GnomeSemiLab.appdata.xml.in  com.github.yihuajack.GnomeSemiLab.desktop.in  com.github.yihuajack.GnomeSemiLab.gschema.xml  meson.build
gnome-semilab/po/: POTFILES
gnome-semilab/src/: gnome-semilab-window.c  gnome-semilab-window.h  gnome-semilab-window.ui  gnome-semilab.gresource.xml  gsp-create-project-widget.c  gsp-create-project-widget.ui  meson.build
po/: meson.build
src/: consts.c  csv_reader.c  csv_reader.h  data_io.h  gnome-semilab-application.c  gnome-semilab-application.h  gnome-semilab-global.c  gnome-semilab-global.h  gnome-semilab-window.c  gnome-semilab-window.h  gnome-semilab-window.ui  gnome-semilab-workspace-private.h  gnome-semilab-workspace.c  gnome-semilab-workspace.h  gnome-semilab-workspace.ui  gnome-semilab.gresource.xml  gsp-create-project-widget.c  gsp-create-project-widget.h  gsp-create-project-widget.ui  main.c  meson.build  sl-plplot-cairo.c  spe_reader.c  sqlimit.c  sqlimit.h  style.css  utils.c  utils.h
src/utils/: spe2csv.c
test/: Tungsten-Halogen 3300K.csv  Tungsten-Halogen_PCE.tsv  astmg173.csv  csv-sketch-reader.c  gsl-test.c  poly_spectrum_results.txt  sqlimit-test.c
test/spectra/: Tungsten-Halogen 3300K.csv  astmg173.csv  poly_spectrum.csv
